Added UI library

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "serve": "concurrently \"vite build --watch\" \"tailwindcss -i ./src/index.css -o ./static/index.css --watch\"",
     "dev": "vite",
+    "server": "go run github.com/Nv4n/go-budget-tracker",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
@@ -23,6 +24,7 @@
     "vite": "^4.4.5"
   },
   "dependencies": {
+    "@sira-ui/tailwind": "^0.11.8",
     "htmx.org": "^1.9.8"
   },
   "packageManager": "yarn@3.6.4"
