--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # File created using '.gitignore Generator' for Visual Studio Code: https://bit.ly/vscode-gig
-# Created by https://www.toptal.com/developers/gitignore/api/yarn,go,goland
-# Edit at https://www.toptal.com/developers/gitignore?templates=yarn,go,goland
+# Created by https://www.toptal.com/developers/gitignore/api/yarn,goland,go,dotenv
+# Edit at https://www.toptal.com/developers/gitignore?templates=yarn,goland,go,dotenv
+
+### dotenv ###
+.env
 
 ### Go ###
 # If you prefer the allow list template instead of the deny list, see community template:
@@ -155,7 +158,7 @@ fabric.properties
 # and uncomment the following lines
 # .pnp.*
 
-# End of https://www.toptal.com/developers/gitignore/api/yarn,go,goland
+# End of https://www.toptal.com/developers/gitignore/api/yarn,goland,go,dotenv
 
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
 
