Working on: Login and Register form UI

--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "dependencies": {
-    "@preline/strong-password": "^2.0.0",
-    "@preline/tooltip": "^2.0.0",
-    "preline": "^2.0.0"
+    "@preline/strong-password": "^2.0.1",
+    "@preline/tabs": "^2.0.1",
+    "@preline/tooltip": "^2.0.1",
+    "preline": "^2.0.2"
   },
   "packageManager": "yarn@3.6.4"
 }
